Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-May-2013 Jean-Marie Simonet
 $ Updating ko-KR installation language
 #$ [#30740] Site name tooltip not translatable correctly

08-May-2013 Mark Dexter
 # [#30125] Search module does not take into account the 'search only' selected. Thanks Luke Collymore.
 # [#30769] Still There are Reference to Joomla! 3.0 Version in 3.1. Thanks Jean-Marie Simonet.
 # [#28288] Unnesessary initialiazing of tooltips in category blog. Thanks Dennis Hermatski.
 # [#30394] *Javascript translations are not available if caching is enabled. Thanks Dennis Hermatski.

07-May-2013 Mark Dexter
 # Revert [#30125] Search module does not take into account the 'search only' selected. Breaks search.
 # [#30729] Template Editor does not Display well in FireFox. Thanks Aleksander Linkov.
 # [#30691] TinyMCE shows buttons with onclick attribute without space and duplicate class. Thanks Dennis Hermatski.
 # [#30125] Search module does not take into account the 'search only' selected. Thanks Brian Teeman.
 # [#30797] *Wrapper module url field should be required. Thanks Jean-Marie Simonet.
 # [#30017] Problems with calendar pop up in Chrome. Thanks Achal Aggarwal.
 # [#30800] Blog item is not rendering intro image. Thanks David Hurley.
 # [#30787] Select Tags filter cannot be translated correctly. Thanks Elin Waring.
 # [#30431] Removed unused css file: editor_content.css. Thanks Nick Savov.
 # [#30869] Incorrect table names used in the #__content_types table. Thanks Elin Waring.

05-May-2013 Michael Babker
 # [#30727] A unpublished or deleted tag is still visible in 'List of all tags' menu item.  Thanks David Hurley
 # [#30744] tag mappings are not deleted after a tag is deleted.  Thanks Thomas Hunziker