@@ -1,0 +1,15 @@
+<?php
+/**
+ * @package     Joomla.Administrator
+ * @subpackage  mod_version
+ *
+ * @copyright   Copyright (C) 2005 - 2013 Open Source Matters, Inc. All rights reserved.
+ * @license     GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+defined('_JEXEC') or die;
+?>
+<?php if (!empty($version)) : ?>
+	<?php echo $version; ?>
+	<?php echo "&nbsp;&mdash;&nbsp;"; ?>
+<?php endif; ?>
