@@ -3,6 +3,7 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
+TPL_ISIS_POSITION_BOTTOM="Bottom"
 TPL_ISIS_POSITION_CPANEL="Cpanel"
 TPL_ISIS_POSITION_CP_SHELL="Unused"
 TPL_ISIS_POSITION_DEBUG="Debug"
