@@ -34,6 +34,7 @@
 		<position>icon</position>
 		<position>cp_shell</position>
 		<position>cpanel</position>
+		<position>bottom</position>
 		<position>footer</position>
 		<position>login</position>
 		<position>debug</position>
