@@ -28,6 +28,7 @@ $ -> Language fix or change
 13-May-2013 Jean-Marie Simonet
  $ Updating ko-KR installation language
  #$ [#30740] Site name tooltip not translatable correctly
+ # [#30812] *No Joomla Version is display at isis bottom
 
 08-May-2013 Mark Dexter
  # [#30125] Search module does not take into account the 'search only' selected. Thanks Luke Collymore.
